--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
     <section class="home">
         <table></table>
         <div class="home-container">
-            <p class="home-title">PORT</p><div class="home-box"><img src="./img/포폴-고양이.png" alt=""></div><p class="home-title">FOLIO</p>
+            <div class="square1"></div>
+            <div class="square2"></div>
+            <div class="circle1"></div>
+            <div class="circle1"></div>
+            <p class="home-title">PORT</p><div class="home-box"></div><p class="home-title">FOLIO</p>
         </div>
     </section>
 
@@ -81,7 +85,7 @@
                 <p>Birth 1994.02.19</p>
             </div>
             <div class="section__title__intro__second">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing <br> elit. Velit vel nesciunt minima iusto enim itaque impedit exercitationem <br> hic recusandae, beatae esse saepe, voluptas aut maiores</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing <br> elit. Velit vel nesciunt minima iusto enim itaque <br> impedit exercitationem <br> hic recusandae, beatae esse saepe, voluptas aut maiores</p>
                 <div class="about__info--wrap">
                     <div class="about__info">
                         <div>
