--- a/index.html
+++ b/index.html
@@ -16,52 +16,7 @@
 <script src="./js/script.js"></script>
 <title>PORTFOLIO</title>
 </head>
-<body class="bgu">
-    <header class="header" id="header">
-        <div class="header-inner flex">
-            <a href="#" id="logo">
-                홍윤근
-            </a>
-            <div class="nav__container">
-                <ul class="nav__list flex">
-                    <li class="nav__item">
-                        <a href="#" data-link="#home" class="nav__link">
-                            <i class="uil uil-estate nav__icon"></i> Home
-                        </a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#" data-link="#about" class="nav__link">
-                            <i class="uil uil-user nav__icon"></i>About
-                        </a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#" data-link="#skills" class="nav__link">
-                            <i class="uil uil-file nav__icon"></i>
-                            Skills
-                        </a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#" data-link="#services" class="nav__link">
-                            <i class="uil uil-briefcase-alt nav__icon"></i>
-                            Services
-                        </a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#" data-link="#portfolio" class="nav__link">
-                            <i class="uil uil-scenery nav__icon"></i>
-                            Portfolio
-                        </a>
-                    </li>
-                    <i class="uil uil-times nav__close" id="navClose"></i>
-                </ul>
-            </div>
-            <div class="nav__btns flex">
-                <i class="uil uil-sun change-theme" id="buttonLight"></i>
-                <i class="uil uil-moon change-theme" id="buttonDark"></i>
-                <i class="uil uil-apps" id="navToggle"></i>
-            </div>
-        </div>
-    </header>
+<body class="">
 
     <!-- ========================home section========================= -->
     <section class="home">
@@ -76,100 +31,107 @@
     </section>
 
     <!-- ======================about section=====================  -->
-    <section class="about inner">
-        <div class="section__title--wrap">
-            <div class="section__title__intro">
-                <h1 class="section__title">About Me.</h1>
-                <p class="">Name 홍윤근</p>
-                <p>Age 28</p>
-                <p>Birth 1994.02.19</p>
+    <section class="about">
+        <div class="header" id="header">
+            <div class="header-inner flex">
+                <a href="#" id="logo">
+                    홍윤근
+                </a>
+                <div class="nav__container">
+                    <ul class="nav__list flex">
+                        <li class="nav__item">
+                            <a href="#" data-link="#home" class="nav__link">
+                                <i class="uil uil-estate nav__icon"></i> Home
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" data-link="#about" class="nav__link">
+                                <i class="uil uil-user nav__icon"></i>About
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" data-link="#skills" class="nav__link">
+                                <i class="uil uil-file nav__icon"></i>
+                                Skills
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" data-link="#services" class="nav__link">
+                                <i class="uil uil-briefcase-alt nav__icon"></i>
+                                Services
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" data-link="#portfolio" class="nav__link">
+                                <i class="uil uil-scenery nav__icon"></i>
+                                Portfolio
+                            </a>
+                        </li>
+                        <i class="uil uil-times nav__close" id="navClose"></i>
+                    </ul>
+                </div>
+                <div class="nav__btns flex">
+                    <i class="uil uil-sun change-theme" id="buttonLight"></i>
+                    <i class="uil uil-moon change-theme" id="buttonDark"></i>
+                    <i class="uil uil-apps" id="navToggle"></i>
+                </div>
             </div>
-            <div class="section__title__intro__second">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing <br> elit. Velit vel nesciunt minima iusto enim itaque <br> impedit exercitationem <br> hic recusandae, beatae esse saepe, voluptas aut maiores</p>
-                <div class="about__info--wrap">
-                    <div class="about__info">
-                        <div>
-                            <h2 class="about__info--title stoudyCount">760</h2>
-                            <span class="about__info--name">학습 시간</span>
-                        </div>
-                        <div>
-                            <h2 class="about__info--title pracCount">100</h2>
-                            <span class="about__info--name">실습 시간</span>
-                        </div>
-                        <div>
-                            <h2 class="about__info--title projectCount">05</h2>
-                            <span class="about__info--name">프로젝트</span>
+        </div>
+
+        <div class="section__title--wrap inner">
+            <div class="section__title__intro">
+                <h1 class="section__title">About</h1>&nbsp;&nbsp; <h1 class="section__title primary__color">Me</h1>&nbsp; <div class="section__title__line"></div>
+                <div class="section__title__sub">
+                    <h2>Profile</h2>
+                </div>
+                <div class="section__title__desc">
+                    <span class="primary__color margin-r">Name </span>&nbsp;&nbsp;&nbsp; <span>홍윤근</span> <br>
+                    <span class="primary__color margin-r">Age </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span> 28</span><br>
+                    <span class="primary__color margin-r">Birth </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span> 1994.02.19</span> <br>
+                </div>
+                <div class="section__title__intro__second ">
+                <p class="text-align-l">모든일에 책임감을 가지고 최선을 다하는 <br> Web Designer & publisher 홍윤근 입니다</p>
+                    <div class="about__info--wrap">
+                        <div class="about__info">
+                            <div class="">
+                                <h2 class="about__info--title stoudyCount">760</h2>
+                                <span class="about__info--name">학습 시간</span>
+                            </div>
+                            <div class="">
+                                <h2 class="about__info--title pracCount">100</h2>
+                                <span class="about__info--name">실습 시간</span>
+                            </div>
+                            <div>
+                                <h2 class="about__info--title projectCount">05</h2>
+                                <span class="about__info--name">프로젝트</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <a download ="이력서_홍윤근.pdf" href="./pdf/이력서.pdf" class="download button">이력서 다운로드</a>
+            </div>
+            <div class="section__title__intro__second">
+                <img src="./img/history.png" alt="" class="history-img">
+                <div class="history__main__desc">
+                    <div class="history__desc1">
+                        <p>2013.02</p>
+                        <p>신라공업고등학교</p>
+                        <p>졸업</p></div>
+                    <div class="history__desc2">
+                        <p>2021.02</p>
+                        <p>대구대학교</p>
+                        <p>졸업</p>
+                    </div>
+                    <div class="history__desc3">
+                        <p>2021.07</p>
+                        <p>그린컴퓨터 디자인 학원</p>
+                        <p>수료</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="resume-download">
+            <a download ="이력서_홍윤근.pdf" href="./pdf/이력서.pdf" class="download button">이력서 다운로드</a>
         </div>
-    </section>
-
-<!-- =============history============= -->
-    <section class="history inner" id="history">
-            <div class="section__title--wrap">
-                <h1 class="section__title">History</h1>
-                <h3 class="section__subtitle">My History</h3>
-            </div>
-            <div class="history__tabs">
-                <div class="history__tab active">
-                    <i class="uil uil-graduation-cap"></i>
-                    Education
-                </div>
-                
-            </div>
-<!-- ====================================== history content 1 ====================================== -->
-        <div class="history__content">
-            <div class="history__item">
-                <div class="history__data">
-                    <h3 class="title">신라공업 고등학교</h3>
-                    <span class="subtitle">졸업</span>
-                    <div class="calendar">2013년 2월</div>
-                </div>
-                <div class="history__divider">
-                    <div class="history__circle"></div>
-                    <div class="history__line"></div>
-                </div>
-                <div class="history__blank"></div>
-            </div>
-            <div class="history__item">
-                <div class="history__blank"></div>
-                <div class="history__divider">
-                    <div class="history__circle"></div>
-                    <div class="history__line"></div>
-                </div>
-                <div class="history__data">
-                    <h3 class="title">대구대학교</h3>
-                    <span class="subtitle">졸업</span>
-                    <div class="calendar">2021년 2월</div>
-                </div>
-            </div>
-            <div class="history__item">
-                <div class="history__data">
-                    <h3 class="title">그리아트 디자인학원</h3>
-                    <span class="subtitle">입학</span>
-                    <div class="calendar">2021년 2월</div>
-                </div>
-                <div class="history__divider">
-                    <div class="history__circle"></div>
-                    <div class="history__line"></div>
-                </div>
-                <div class="history__blank"></div>
-            </div>
-            <div class="history__item">
-                <div class="history__blank"></div>
-                <div class="history__divider">
-                    <div class="history__circle"></div>
-                </div>
-                <div class="history__data">
-                    <h3 class="title">그린아트 디자인학원</h3>
-                    <span class="subtitle">수료</span>
-                    <div class="calendar">2021년 7월</div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!------------------- skills --------------------->
     <section class="skills inner" id="skills">
